--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     <button id="saveButton" style="display:none;">Save</button>
                 </div>
                 <div class="view">
-                    <button class="view_button">View</button>
+<!--                     <button class="view_button">View</button> -->
                 </div>
             </div>
             <div class="sections">
