--- a/sample.html
+++ b/sample.html
@@ -1,4 +1,4 @@
-//shapes sample
+<!-- //shapes sample
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -39,4 +39,4 @@
     <div class="shape">&#128172;</div> <!-- Speech Bubble -->
     <div class="shape">&#128173;</div> <!-- Thought Bubble -->
 </body>
-</html>
+</html> -->
